--- a/app/views/current_bps/show.html.erb
+++ b/app/views/current_bps/show.html.erb
@@ -11,14 +11,25 @@
 </p>
 
 <p>
-  <strong>Sysbp:</strong>
-  <%= @current_bp.sysbp %>
+  <strong>Sys1:</strong>
+  <%= @current_bp.sys1 %>
 </p>
 
 <p>
-  <strong>Diabp:</strong>
-  <%= @current_bp.diabp %>
+  <strong>Dia1:</strong>
+  <%= @current_bp.dia1 %>
+</p>
+
+<p>
+  <strong>Sys2:</strong>
+  <%= @current_bp.sys2 %>
+</p>
+
+<p>
+  <strong>Dia2:</strong>
+  <%= @current_bp.dia2 %>
 </p>
 
 <%= link_to 'Edit', edit_current_bp_path(@current_bp) %> |
 <%= link_to 'Back', current_bps_path %>
+
