--- a/app/views/current_bps/index.html.erb
+++ b/app/views/current_bps/index.html.erb
@@ -7,8 +7,10 @@
       <th>temp_user_id</th>
       <th>Date</th>
       <th>Ampm</th>
-      <th>Sysbp</th>
-      <th>Diabp</th>
+      <th>Sys1</th>
+      <th>Dia1</th>
+      <th>Sys2</th>
+      <th>Dia2</th>
       <th></th>
       <th></th>
       <th></th>
@@ -22,8 +24,10 @@
         <td><%= current_bp.temp_user_id %></td>
         <td><%= current_bp.date %></td>
         <td><%= current_bp.ampm %></td>
-        <td><%= current_bp.sysbp %></td>
-        <td><%= current_bp.diabp %></td>
+        <td><%= current_bp.sys1 %></td>
+        <td><%= current_bp.dia1 %></td>
+        <td><%= current_bp.sys2 %></td>
+        <td><%= current_bp.dia2 %></td>
         <td><%= link_to 'Show', current_bp %></td>
         <td><%= link_to 'Edit', edit_current_bp_path(current_bp) %></td>
         <td><%= link_to 'Destroy', current_bp, method: :delete, data: { confirm: 'Are you sure?' } %></td>
