--- a/app/views/current_bps/show.html.erb
+++ b/app/views/current_bps/show.html.erb
@@ -12,22 +12,12 @@
 
 <p>
   <strong>Sys1:</strong>
-  <%= @current_bp.sys1 %>
+  <%= @current_bp.sysbp %>
 </p>
 
 <p>
   <strong>Dia1:</strong>
-  <%= @current_bp.dia1 %>
-</p>
-
-<p>
-  <strong>Sys2:</strong>
-  <%= @current_bp.sys2 %>
-</p>
-
-<p>
-  <strong>Dia2:</strong>
-  <%= @current_bp.dia2 %>
+  <%= @current_bp.diabp %>
 </p>
 
 <%= link_to 'Edit', edit_current_bp_path(@current_bp) %> |
