--- a/app/views/current_bps/_form.html.erb
+++ b/app/views/current_bps/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :sys1, 'Systolic value' %><br>
-    <%= f.number_field :sys1 %>
+    <%= f.label :sysbp, 'Systolic value' %><br>
+    <%= f.number_field :sysbp %>
   </div>
   <div class="field">
-    <%= f.label :dia1, 'Diastolic value' %><br>
-    <%= f.number_field :dia1 %>
+    <%= f.label :diabp, 'Diastolic value' %><br>
+    <%= f.number_field :diabp %>
   </div>
   <div class="actions">
     <%= f.submit 'Submit blood pressure' %>
