BP wizard v1.00 17/08/13 edit bp working but no strong params

--- a/app/views/current_bps/display_bp.html.erb
+++ b/app/views/current_bps/display_bp.html.erb
@@ -11,7 +11,7 @@
 
 <p>
 	Made a mistake entering these blood pressure readings?<br />
-	Go <%= link_to 'back', review_current_bps_path %> and alter them.
+	Go <%= link_to 'back', review_current_bps_path, method: :post %> and alter them.
 </p>
 
 <h2>Your average blood pressure from this set of readings</h2>
