--- a/app/views/current_bps/review.html.erb
+++ b/app/views/current_bps/review.html.erb
@@ -1,5 +1,28 @@
 <h2>Your two blood pressure readings were:</h2>
 
+<%= form_tag update_bp_current_bps_path, :method => :patch do %>
+	<% @current_bps.each do |bp| %>
+		<%= fields_for "current_bps[]", bp do |f| %>
 
+  			<% if bp.errors.any? %>
+    			<div id="error_explanation">
+      				<%= error_messages_for "current_bp", "sysbp" %>
+    			</div>
+  			<% end %>
 
-<%= render 'form_edit' %>
+  			<div class="field">
+    			<%= f.label :sysbp, 'Systolic value' %><br>
+    			<%= f.number_field :sysbp %>
+  			</div>
+  			<div class="field">
+    			<%= f.label :diabp, 'Diastolic value' %><br>
+    			<%= f.number_field :diabp %>
+  			</div>
+		<% end %>
+	<% end %>
+
+	<div class="actions">
+    	<%= submit_tag 'Update blood pressure' %>
+    </div>
+<% end %>
+	
