BP wizard v1.00 21/08/13 Browser back button tamed, auth links done

--- a/app/views/current_bps/display_bp.html.erb
+++ b/app/views/current_bps/display_bp.html.erb
@@ -24,3 +24,11 @@
   <strong>Diastolic BP:</strong>
   <%= number_with_precision(@average_set_diabp, :precision => 0) %>
 </p>
+
+<%= link_to 'Reset', reset_current_bps_path %>
+
+<div id='signup_msg'>
+	<% if !user_signed_in? %>
+		<p>Please <%= link_to 'sign-up', new_user_registration_path %> for our lovely service</p>
+	<% end %>
+</div>
