BP wizard v1.00 25/08/13 Migration of temp_user BP to current_user, autolayout.js

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -67,3 +67,10 @@ div {
     list-style: square;
   }
 }
+
+#container {
+  font-family: arial;
+  font-size: 10pt;
+  width: 800px;
+  visibility: hidden;
+}
