--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,16 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <script>
+  	window.onload = function()
+	  {
+	  autolayout();
+	  }
+  </script>
 </head>
 <body>
+
+<div id="container">
 
 <div id="user_nav">
   <% if user_signed_in? %>
@@ -18,6 +26,8 @@
 </div>
 
 <%= yield %>
+
+</div>
 
 </body>
 </html>
