--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,9 @@
 		</div>
 	</div>
 	
-	<%= yield %>
+	<div id='content'>
+		<%= yield %>
+	</div>
 	
 	<div id='bottombar'>
 		<a href=''>FAQs</a>
