--- a/app/views/current_bps/_form.html.erb
+++ b/app/views/current_bps/_form.html.erb
@@ -1,19 +1,21 @@
 <%= form_for(@current_bp) do |f| %>
-  <% if @current_bp.errors.any? %>
-    <div id="error_explanation">
-      <%= error_messages_for "current_bp", "sysbp" %>
-    </div>
-  <% end %>
+	<% if @current_bp.errors.any? %>
+    	<div id="error_explanation">
+			<%= error_messages_for "current_bp", "sysbp" %>
+		</div>
+  	<% end %>
 
-  <div class="field">
-    <%= f.label :sysbp, 'Systolic value' %><br>
-    <%= f.number_field :sysbp %>
-  </div>
-  <div class="field">
-    <%= f.label :diabp, 'Diastolic value' %><br>
-    <%= f.number_field :diabp %>
-  </div>
-  <div class="actions">
-    <%= f.submit 'Submit blood pressure' %>
-  </div>
+	<div id='input_bp_boxes'>
+    	<%= f.text_field(:sysbp, size: 4) %>
+  		<div id='slash'>
+  			/
+  		</div>
+	    <%= f.text_field(:diabp, size: 4) %>
+  		<div id='mmhg'>
+  			mmHg
+  		</div>
+  	</div>
+  	<div class="actions">
+	   	<%= f.submit 'Next' %>
+	</div>
 <% end %>
