--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -1,7 +1,11 @@
-<h1>What is your blood pressure?</h1>
+<div id='main'>
+	<h1>Is my blood pressure too high?</h1>
+	<p>Provide us with some blood pressure readings and we'll answer that question right away!</p><br />
+	<p>Whilst seated and relaxed, please take a blood pressure reading for us now and enter it in the boxes below:</p>
+	<div id='input_bp'>	
+		<%= render 'form' %>
+	</div>
+</div>
 
-<p>Whilst seated and relaxed, please take a blood pressure reading for us now and enter it in the boxes below:</p>	
-	
-<%= render 'form' %>
-
-<%= link_to 'Back', current_bps_path %>
+<div id='average_bp'>
+</div>
