--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -9,3 +9,8 @@
 
 <div id='average_bp'>
 </div>
+
+<div id='how_to_measure_bp'>
+	<h1>How do I measure my blood pressure?</h1>
+	<p>If you need advice on how to measure your blood pressure, please see our <a href="">blood pressure measurement guide.</a></p>
+</div>
