BP wizard v1.00 28/08/13 average BP partial started

--- a/app/views/current_bps/display_bp.html.erb
+++ b/app/views/current_bps/display_bp.html.erb
@@ -18,11 +18,11 @@
 
 <p>
   <strong>Systolic BP:</strong>
-  <%= number_with_precision(@average_set_sysbp, :precision => 0) %>
+  <%= number_with_precision(@average_sysbp, :precision => 0) %>
 </p>
 <p>
   <strong>Diastolic BP:</strong>
-  <%= number_with_precision(@average_set_diabp, :precision => 0) %>
+  <%= number_with_precision(@average_diabp, :precision => 0) %>
 </p>
 
 <div id='signup_msg'>
