--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -8,6 +8,7 @@
 </div>
 
 <div id='average_bp'>
+	<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp} %>
 </div>
 
 <div id='how_to_measure_bp'>
