--- a/app/views/current_bps/new2.html.erb
+++ b/app/views/current_bps/new2.html.erb
@@ -7,6 +7,7 @@
 </div>
 
 <div id='average_bp'>
+	<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
 </div>
 
 <div id='how_to_measure_bp'>
