--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -100,8 +100,10 @@ a:hover {
     margin-left: 12px;
   }
   #sign_out {
-    width: 70px;
+    width: 90px;
+    margin: -5px 0px 0px 62px;
     float: left;
+    line-height: 14px;
   }
 }
 
