--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -44,7 +44,7 @@ a:hover {
   border: 2px solid red;
   padding: 7px;
   padding-bottom: 0;
-  margin: 10px 0px 0px 120px;
+  margin: 10px 0px 0px 0px;
   background-color: #f0f0f0;
   h2 {
     text-align: left;
@@ -134,6 +134,25 @@ a.button1:hover {
 
 a.button2:hover {
   background-color: #92d36e;
+}
+
+.button3 {
+  display:block;
+  text-align:center;
+  padding:10px 20px 10px 20px;
+  border:1px solid #033076;
+  -webkit-border-radius:7px;
+  -moz-border-radius:7px;
+  border-radius:7px;
+  background-color:#72bb53;
+  cursor:pointer;
+  &:hover {
+    background-color:#92d36e;
+  }
+  
+  span {
+    font-size: 14pt;
+  }
 }
 
 #topmenu {
