BP wizard v1.00 08/09/13 CSS for sign-up and sign-in

--- a/app/views/current_bps/_form.html.erb
+++ b/app/views/current_bps/_form.html.erb
@@ -18,7 +18,7 @@
 		</div>
   	<% end %>
   	
-  	<div class="actions">
-	   	<%= f.submit 'Next' %>
+  	<div id="submit">
+	   	<%= f.submit 'Next', :class => 'button4' %>
 	</div>
 <% end %>
