--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -31,7 +31,7 @@
 	<% end %>
 	<div id='tac_error_msg'>
 	</div>
-  	<div id='submit_button'>
+  	<div id='sign_up_button'>
   		<button type='submit' class='button3'>
   			<span>Sign up</span>
   			<br />
