--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,12 @@
 <div id='main'>
+	<p>Sign up to get personalised advice about your blood pressure.</p>
+	<br />
+	<p>We cover all aspects of blood pressure care and will answer any questions, such as:</p>
+	<ul>
+		<li>Is my blood pressure too high or low?</li>
+		<li>How can I control my blood pressure?</li>
+		<li>Do I need any other tests?</li>
+	</ul>
 	<div id='sign_up'>
 		<%= render :partial => 'devise/registrations/new' %>
 	</div>
