--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -45,9 +45,14 @@ p {
       #error_wrapper {
         margin-left: 120px;
       }
+      
+      #submit {
+        float:left;
+        margin: 20px 0px 0px 260px;
+      }
     }
     
-    #sign_up {
+    #sign_up, #sign_in {
       float: left;
       width: 400px;
       margin: 30px 0px 10px 40px;
@@ -58,25 +63,37 @@ p {
       -moz-border-radius:10px;
       border-radius:10px;
       background-color:#ffffff;
-    }
-    
-    #form {
+      
+      #form {
       padding: 20px;
       
-      #tac_msg {
-        vertical-align: top;
-      }
+        #tac_msg {
+          vertical-align: top;
+        }
       
-      #tac_error_msg {
-        text-align: center;
-        margin: 5px 0px 5px 0px;
-        color: #ff0000;
-      }
+        #tac_error_msg {
+          text-align: center;
+          margin: 5px 0px 5px 0px;
+          color: #ff0000;
+        }
       
-      #submit_button {
-        float:left;
-        padding: 10px 0px 20px 50px;
+        #sign_up_button {
+          float:left;
+          padding: 10px 0px 20px 50px;
+        }
+      
+        #sign_in_button {
+          padding: 10px 0px 20px 80px;
+        }
+      
+        #forgot_pwd {
+          text-align:center;
+        }
       }
+    }
+    
+    #sign_in {
+      width: 300px;
     }
   }
   
@@ -217,24 +234,4 @@ p {
   float: left;
   font-size: 8pt;
   padding: 10px 0px 0px 10px;
-}
-
-.actions {
-  float:left;
-  margin: 20px 0px 0px 260px;
-  
-  input {
-    padding:5px 15px 5px 15px;
-    border:1px solid #033076;
-    -webkit-border-radius:7px;
-    -moz-border-radius:7px;
-    border-radius:7px;
-    background-color:#D4E3FC;
-    font-size: 12pt;
-    cursor:pointer;
-    
-    &:hover {
-      background-color:#ffffff;
-    }
-  }
 }
