--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -155,6 +155,22 @@ a.button2:hover {
   }
 }
 
+.button4 {
+  display:block;
+  text-align:center;
+  padding:5px 15px 5px 15px;
+  border:1px solid #033076;
+  -webkit-border-radius:7px;
+  -moz-border-radius:7px;
+  border-radius:7px;
+  background-color:#D4E3FC;
+  font-size: 12pt;
+  cursor:pointer;
+  &:hover {
+    background-color:#ffffff;
+  }
+}
+
 #topmenu {
   width:950px;
   height:30px;
