BP wizard v1.00 10/09/13 Devise changes, static pages, more CSS

--- a/app/views/current_bps/_average_bp.html.erb
+++ b/app/views/current_bps/_average_bp.html.erb
@@ -12,7 +12,7 @@
 </div>
 
 <% if avsys.nil? %>
-	<div id='notice'>
+	<div id='bp_needed_msg'>
 		Please take a blood pressure reading
 	</div>
 <% else %>
