--- a/app/views/current_bps/new2.html.erb
+++ b/app/views/current_bps/new2.html.erb
@@ -1,6 +1,10 @@
+<% if flash[:notice] %>
+	<div id="notice"><%= notice %></div>
+<% end %>
+
 <div id='main'>
 	<h1>Is my blood pressure too high?</h1>
-	<p>Thank you. Please take a second reading and enter it in the boxes below:</p>
+	<p>Thank you. Please stay setaed and relaxed for at least 1 minute, then take a second reading and enter it in the boxes below:</p>
 	<div id='input_bp'>	
 		<%= render 'form' %>
 	</div>
