--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -52,7 +52,7 @@ p {
       }
     }
     
-    #sign_up, #sign_in {
+    #sign_up, #sign_in, #forgot_pwd {
       float: left;
       width: 400px;
       margin: 30px 0px 10px 40px;
@@ -66,6 +66,10 @@ p {
       
       #form {
       padding: 20px;
+      
+        td {
+          padding-right: 20px;
+        }
       
         #tac_msg {
           vertical-align: top;
@@ -85,8 +89,12 @@ p {
         #sign_in_button {
           padding: 10px 0px 20px 80px;
         }
+        
+        #forgot_pwd_button {
+          padding: 10px 0px 20px 30px;
+        }
       
-        #forgot_pwd {
+        #forgot_pwd_txt {
           text-align:center;
         }
       }
@@ -94,6 +102,10 @@ p {
     
     #sign_in {
       width: 300px;
+    }
+    
+    #warning_msg {
+      color: #ff0000;
     }
   }
   
@@ -134,7 +146,7 @@ p {
       }
     }
     
-    #notice {
+    #bp_needed_msg {
       position: absolute;
       top: 100px;
       left: 120px;
