--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -28,7 +28,19 @@ a:hover {
 }
 
 #notice {
-  color: green;
+  float:left;
+  width: 300px;
+  margin: 10px 313px 10px 300px;
+  padding: 5px 10px 5px 10px;
+  border-style:solid;
+  border-width:2px;
+  border-color:#aedd94;
+  -webkit-border-radius:7px;
+  -moz-border-radius:7px;
+  border-radius:7px;
+  background-color:#aedd94;
+  text-align: center;
+  color: #000000;
 }
 
 .field_with_errors {
