--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:notice] %>
+	<div id="notice"><%= notice %></div>
+<% end %>
+
 <div id='main'>
 	<h1>Is my blood pressure too high?</h1>
 	<p>Provide us with some blood pressure readings and we'll answer that question right away!</p><br />
