--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,33 @@
-<h2>Forgot your password?</h2>
+<div id='main'>
+	<div id='forgot_pwd'>
+		<div id='title'>
+			Forgot your password?
+		</div>
+		
+		<div id='form'>
+			<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+			<table>
+				<tr>
+					<td><%= f.label :email %></td>
+					<td><%= f.email_field :email, :autofocus => true %></td>
+				</tr>
+			</table>
+		
+			<% if resource.errors.any? %>
+				<div id="error_explanation">
+					<%= error_messages_for resource %>
+				</div>
+			<% end %>
+			
+			<div id='forgot_pwd_button'>
+  				<%= f.submit "Send me reset password instructions", :class => 'button4' %>
+  			</div>
+  			
+			<% end %>
+		</div>
+	</div>
+</div>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
 
-<%= render "devise/shared/links" %>
