Heroku and postgres changes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,5 +4,6 @@
 
 <div id='main'>
 	<h1>Home</h1>
-	<p>This page should act as a hub to the rest of the site, aimed at those who aren't yet signed-up. So I think we should have details about the service, links to useful information (on our site), a link to the BP wizard etc</p>
+	<p>This page should act as a hub to the rest of the site, aimed at those who aren't yet signed-up. So I think we should have details about the service, links to useful information (on our site), a link to the BP wizard etc</p><br />
+	<p>Currently you will land here after logging in, but this will not be the case in future - I need to develop the logic to determine where you need to be sent after logging in (i.e. is a BP reading due or not)</p>
 </div>
