--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
 			<a href=''>My medical details</a>
 		</div>
 		<div class='topmenucontent'>
-			<%= link_to 'My blood pressure readings', new_current_bp_path %>
+			<%= link_to 'My blood pressure readings', router_current_bps_path %>
 		</div>
 		<div class='topmenucontent'>
 			<a href=''>My blood test results</a>
