--- a/app/views/current_bps/_form.html.erb
+++ b/app/views/current_bps/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for(@current_bp) do |f| %>
 	<div id='input_bp_boxes'>
-    	<%= f.text_field(:sysbp, size: 4) %>
+    	<%= f.text_field(:sysbp) %>
   		<div id='slash'>
   			/
   		</div>
-	    <%= f.text_field(:diabp, size: 4) %>
+	    <%= f.text_field(:diabp) %>
   		<div id='mmhg'>
   			mmHg
   		</div>
