--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,7 +4,7 @@
 			Forgot your password?
 		</div>
 		
-		<div id='form'>
+		<div id='nav_form'>
 			<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
 			<table>
 				<tr>
