--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -2,7 +2,7 @@
 	Sign up
 </div>
 
-<div id='form'>
+<div id='nav_form'>
 	<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :onsubmit => "return checktc();"}) do |f| %>
 	<table>
 		<tr>
