--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -1,7 +1,3 @@
-<% if flash[:notice] %>
-	<div id="notice"><%= notice %></div>
-<% end %>
-
 <div id='main'>
 	<h1>Is my blood pressure too high?</h1>
 	<p>Provide us with some blood pressure readings and we'll answer that question right away!</p><br />
@@ -11,8 +7,12 @@
 	</div>
 </div>
 
-<div id='average_bp'>
-	<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
+<div id='average_bp_container'>
+	<% if !@average_sysbp.nil? %>
+		<div id='average_bp'>
+		<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
+		</div>
+	<% end %>
 </div>
 
 <div id='how_to_measure_bp'>
