--- a/app/views/current_bps/new2.html.erb
+++ b/app/views/current_bps/new2.html.erb
@@ -1,7 +1,3 @@
-<% if flash[:notice] %>
-	<div id="notice"><%= notice %></div>
-<% end %>
-
 <div id='main'>
 	<h1>Is my blood pressure too high?</h1>
 	<p>Thank you. Please stay setaed and relaxed for at least 1 minute, then take a second reading and enter it in the boxes below:</p>
@@ -10,8 +6,12 @@
 	</div>
 </div>
 
-<div id='average_bp'>
-	<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
+<div id='average_bp_container'>
+	<% if !@average_sysbp.nil? %>
+		<div id='average_bp'>
+			<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
+		</div>
+	<% end %>
 </div>
 
 <div id='how_to_measure_bp'>
